--- a/src/app/modules/alta-categoria/alta-categoria.component.html
+++ b/src/app/modules/alta-categoria/alta-categoria.component.html
@@ -61,12 +61,15 @@
 
                       <div class="col-sm-6">
                         <p>
-                           <mat-form-field appearance="outline"  style="width: 96%;" required>
-                              <mat-label>Fecha creación</mat-label>
-                              <input type="date" placeholder="2003" matInput autocomplete="off" id="fechaCreacion" formControlName="fechaCreacion">
-                           </mat-form-field>
+                          <mat-form-field appearance="outline" style="width: 96%;" required>
+                            <mat-label>Fecha creación</mat-label>
+                            <!-- Utiliza el formato yyyy-MM-dd para el input date -->
+                            <input type="date" matInput formControlName="fechaCreacion">
+                          </mat-form-field>
                         </p>
-                     </div>
+                      </div>
+                      
+                      
                    </div>
                    <div style="display: flex; justify-content: center;">
                       <button mat-stroked-button type="submit" (click)="enviar()" style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px; margin-right: 90px;">Aceptar</button>
