--- a/src/app/modules/alta-categoria/alta-categoria.component.html
+++ b/src/app/modules/alta-categoria/alta-categoria.component.html
@@ -52,7 +52,7 @@
                    <div class="row">
                       <div class="col-sm-6">
                          <p>
-                            <mat-form-field style="display: inline-block; width: 100%; height: 110px;" required>
+                            <mat-form-field appearance="outline" style="display: inline-block; width: 100%; height: 110px;" required>
                                <mat-label>Descripción</mat-label>
                                <textarea class="textarea" matInput rows="4" placeholder="Descripción breve de la categoria" cols="50" style="display: inline-block; width: 100%;height: 100%;" id="descripcion" formControlName="descripcion"> </textarea>
                             </mat-form-field>
